test/compare/testdata/scripts/package.sg
// errorcheck

package main  // ERROR `unexpected package, expecting statement`
